sample/schaufel.conf: exports example

--- a/sample/schaufel.conf
+++ b/sample/schaufel.conf
@@ -36,4 +36,16 @@ producers =
         broker = "zookeeper-1";
         topic = "impressions";
     }
+    {
+        type = "exports";
+        threads = 1;
+        host = "localhost:5432";
+        topic = "installs";
+        jpointers = (
+            "/service",
+            "/context/message",
+            "/context/Form/0",
+            ["/timestamp", "timestamp"],
+        );
+    }
 );
