Extract kafka, redis and exports to a separate contrib modules

--- a/contrib/exports/Makefile
+++ b/contrib/exports/Makefile
@@ -1,11 +1,11 @@
 include ../../Makefile.global
 
 CFLAGS += -fPIC
-CFLAGS += -lpq -lconfig -lpthread
+CFLAGS += -lpq -ljson-c -lconfig -lpthread
 CFLAGS += -I../../src/
 
-OBJ = postgres.o
-LIB = postgres.so
+OBJ = exports.o
+LIB = exports.so
 
 all: remove_obj link
 
