--- a/contrib/redis/Makefile
+++ b/contrib/redis/Makefile
@@ -1,11 +1,11 @@
 include ../../Makefile.global
 
 CFLAGS += -fPIC
-CFLAGS += -lpq -lconfig -lpthread
+CFLAGS += -lhiredis -lconfig -lpthread
 CFLAGS += -I../../src/
 
-OBJ = postgres.o
-LIB = postgres.so
+OBJ = redis.o
+LIB = redis.so
 
 all: remove_obj link
 
