Add recursive clean and install targets to contrib Makefile

--- a/contrib/Makefile
+++ b/contrib/Makefile
@@ -1,8 +1,20 @@
 SUBDIRS = $(wildcard */.)
+INSTALLDIRS = $(patsubst %, install-%, $(SUBDIRS))
+CLEANDIRS = $(patsubst %, clean-%, $(SUBDIRS))
 
 all: $(SUBDIRS)
+
+install: $(INSTALLDIRS)
+
+clean: $(CLEANDIRS)
 
 $(SUBDIRS):
 	$(MAKE) -C $@
 
-.PHONY: all $(SUBDIRS)
+$(INSTALLDIRS):
+	$(MAKE) -C $(patsubst install-%, %, $@) install
+
+$(CLEANDIRS):
+	$(MAKE) -C $(patsubst clean-%, %, $@) clean
+
+.PHONY: all $(SUBDIRS) $(INSTALLDIRS) $(CLEANDIRS)
