--- a/Makefile.global.in
+++ b/Makefile.global.in
@@ -1,12 +1,18 @@
-BINDIR ?= @bindir@
-CONTRIBDIR ?= @libdir@/schaufel
-MANDIR ?= @mandir@
-MAN1DIR = $(MANDIR)/man1
-MAN5DIR = $(MANDIR)/man5
-DOCDIR ?= @docdir@/schaufel
-INSTALL ?= install -D
-DATAROOTDIR := @datarootdir@
-PTHREAD_LIB = @PTHREAD_LIB@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+datarootdir=@datarootdir@
+
+bindir ?= @bindir@
+libdir ?= @libdir@
+contribdir ?= @libdir@/@PACKAGE_NAME@
+mandir ?= @mandir@
+man1dir = $(mandir)/man1
+man5dir = $(mandir)/man5
+docdir ?= @docdir@/schaufel
 
 CC = @CC@
 LD = @CC@
+INSTALL ?= install -D
+PTHREAD_LIB = @PTHREAD_LIB@
+
+CFLAGS=@CFLAGS@
