--- a/contrib/kafka/Makefile
+++ b/contrib/kafka/Makefile
@@ -1,24 +1,5 @@
-include ../../Makefile.global
+LIBS := -lrdkafka -lconfig -lpthread
+OBJ := kafka.o
+LIB := kafka.so
 
-CFLAGS += -fPIC
-CFLAGS += -lrdkafka -lconfig -lpthread
-CFLAGS += -I../../src/
-
-OBJ = kafka.o
-LIB = kafka.so
-
-all: clean link
-
-link: $(OBJ)
-	$(LD) $(OBJ) -shared -o $(LIB)
-
-clean:
-	rm -f $(OBJ)
-
-%.o: %.c
-	$(CC) $(CFLAGS) -c $< -o $@
-
-install: all
-	$(INSTALL) $(LIB) $(CONTRIBDIR)/$(LIB)
-
-.PHONY: all link clean install
+include ../../contrib.mk
