Install headers and global makefiles, add options (-I -L) to schaufel that print include path and library path and make use of those to build contribs and extensions

--- a/Makefile.global.in
+++ b/Makefile.global.in
@@ -3,7 +3,7 @@ exec_prefix=@exec_prefix@
 datarootdir=@datarootdir@
 
 bindir ?= @bindir@
-libdir ?= @libdir@
+includedir ?= @includedir@/@PACKAGE_NAME@
 contribdir ?= @libdir@/@PACKAGE_NAME@
 mandir ?= @mandir@
 man1dir = $(mandir)/man1
