--- a/contrib/exports/Makefile
+++ b/contrib/exports/Makefile
@@ -1,5 +1,7 @@
+CONTRIB := 1
+SCHAUFEL ?= schaufel
 LIBS := -lpq -ljson-c -lconfig -lpthread
 OBJ := exports.o
 LIB := exports.so
 
-include ../../contrib.mk
+include $(shell $(SCHAUFEL) -L)/contrib.mk
