--- a/contrib/kafka/Makefile
+++ b/contrib/kafka/Makefile
@@ -1,5 +1,7 @@
+CONTRIB := 1
+SCHAUFEL ?= schaufel
 LIBS := -lrdkafka -lconfig -lpthread
 OBJ := kafka.o
 LIB := kafka.so
 
-include ../../contrib.mk
+include $(shell $(SCHAUFEL) -L)/contrib.mk
