--- a/contrib/redis/Makefile
+++ b/contrib/redis/Makefile
@@ -1,5 +1,7 @@
+CONTRIB := 1
+SCHAUFEL ?= schaufel
 LIBS := -lhiredis -lconfig -lpthread
 OBJ := redis.o
 LIB := redis.so
 
-include ../../contrib.mk
+include $(shell $(SCHAUFEL) -L)/contrib.mk
