Add configure script to the repo; small fixes to the makefiles; remove autogenerated headers and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,12 @@
 bin/
 *.swp
 log/
+
+# Files created by configure
+/config.cache
+/config.log
+/config.status
+/Makefile
+/Makefile.global
+/src/include/paths.h
+/src/include/build.h
