--- a/contrib/exports/Makefile
+++ b/contrib/exports/Makefile
@@ -4,4 +4,4 @@ LIBS := -lpq -ljson-c -lconfig -lpthread
 OBJ := exports.o
 LIB := exports.so
 
-include $(shell $(SCHAUFEL) -L)/contrib.mk
+include ../../contrib.mk
