--- a/contrib/redis/Makefile
+++ b/contrib/redis/Makefile
@@ -4,4 +4,4 @@ LIBS := -lhiredis -lconfig -lpthread
 OBJ := redis.o
 LIB := redis.so
 
-include $(shell $(SCHAUFEL) -L)/contrib.mk
+include ../../contrib.mk
