hooks: improve documentation

--- a/doc/hooks.conf
+++ b/doc/hooks.conf
@@ -17,7 +17,7 @@ consumers = (
 queue = {
     postadd = (
 /*
-    Turn the queue into postgres binary.
+    Turn each message into postgres binary copy format
     Put "/token" into metadata jpointer
 */
         {
