Makefile.am: man pages and documentation

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,3 @@
 SUBDIRS = src
-dist_doc_DATA = README
+dist_doc_DATA = README doc/dummy.conf doc/hooks.conf doc/schaufel.conf
+dist_man_MANS = man/schaufel.1 man/schaufel.conf.5
