configure.ac: support make check

--- a/configure.ac
+++ b/configure.ac
@@ -230,5 +230,5 @@ AX_GCC_BUILTIN(__builtin_bswap32)
 AX_GCC_BUILTIN(__builtin_bswap64)
 
 ############################################################
-AC_CONFIG_FILES([Makefile src/Makefile])
+AC_CONFIG_FILES([Makefile src/Makefile t/Makefile])
 AC_OUTPUT
