--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,3 @@
-SUBDIRS = src
+SUBDIRS = src t
 dist_doc_DATA = README doc/dummy.conf doc/hooks.conf doc/schaufel.conf
 dist_man_MANS = man/schaufel.1 man/schaufel.conf.5
