utils/metadata.{c,h} and deps: first prototype for htable.c

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,6 +4,7 @@ schaufel_SOURCES = \
 	redis.c file.c kafka.c producer.c \
 	hooks/dummy.c hooks/jsonexport.c hooks/xmark.c \
 	utils/array.c utils/fnv.c utils/metadata.c utils/strlwr.c utils/bintree.c \
-	utils/helper.c utils/postgres.c utils/config.c utils/logger.c utils/scalloc.c
+	utils/helper.c utils/postgres.c utils/config.c utils/logger.c utils/scalloc.c \
+	utils/htable.c
 
 schaufel_LDFLAGS = @LIBS@
