--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -62,7 +62,7 @@ jobs:
         run: make clean && CC=clang LDFLAGS='-fsanitize=address -fno-omit-frame-pointer' CFLAGS='-Og -fsanitize=address -fno-omit-frame-pointer' ./configure
 
       - name: Run testsuite with ASAN
-        run: make test
+        run: VERBOSE=1 make test
 
       - name: Make schaufel with ASAN
         run: make
@@ -119,7 +119,7 @@ jobs:
         run: autoreconf --force -i && ./configure
 
       - name: Run testsuite
-        run: make test
+        run: VERBOSE=1 make test
 
       - name: Make
         run: make
