Makefile.am: also install transactional.conf

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 SUBDIRS = src t
 test : check-recursive
 
-dist_doc_DATA = README doc/dummy.conf doc/hooks.conf doc/schaufel.conf
+dist_doc_DATA = README doc/dummy.conf doc/hooks.conf doc/schaufel.conf doc/transactional.conf
 dist_man_MANS = man/schaufel.1 man/schaufel.conf.5
